2009-12-30  Eric Belanger  <eric@archlinux.org>

	* libsndfile 1.0.21-1
	* Upstream update
	* Updated source url

2009-07-09  Eric Belanger  <eric@archlinux.org>

	* libsndfile 1.0.20-3
	* Added libvorbis depends (close FS#15313)

2009-06-03  Eric Belanger  <eric@archlinux.org>

	* libsndfile 1.0.20-2
	* Added jack-audio-connection-kit support (close FS#14658)

2009-05-14  Eric Belanger  <eric@archlinux.org>

	* libsndfile 1.0.20-1
	* Upstream update

2009-03-03  Eric Belanger  <eric@archlinux.org>

	* libsndfile 1.0.19-1
	* Upstream update

2009-02-07  Eric Belanger  <eric@archlinux.org>

	* libsndfile 1.0.18-1
	* Upstream update
	* Added license
	* Added ChangeLog