@@ -1,3 +1,7 @@
+2010-08-23  Eric Belanger  <eric@archlinux.org>
+
+	* Removed jack makedepends and optdepends (close FS#20574)
+
 2009-12-30  Eric Belanger  <eric@archlinux.org>
 
 	* libsndfile 1.0.21-1
